--- a/tic-tac-toe-game.css
+++ b/tic-tac-toe-game.css
@@ -2,6 +2,6 @@
     width: 80%;
     margin-left: auto;
     margin-right: auto;
-    background-color: cornflowerblue;
+    background: #b35959;
 }
 
